// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Pager Offset Pager 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item active disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=1"
    >
      <span
        aria-hidden="true"
      >
        «
      </span>
      <span
        className="sr-only"
      >
        First
      </span>
      <span
        className="sr-only"
      >
        (current)
      </span>
    </span>
  </li>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=0"
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </span>
  </li>
  <li
    className="page-item active"
  >
    <span
      className="page-link"
      disabled={false}
      href="/?page=1"
    >
      1
      <span
        className="sr-only"
      >
        (current)
      </span>
    </span>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=2"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=3"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=4"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=5"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=6"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      6
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      >
        …
      </span>
      <span
        className="sr-only"
      >
        More
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=10"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      10
    </a>
  </li>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=2"
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="sr-only"
      >
        Next
      </span>
    </span>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=10"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        aria-hidden="true"
      >
        »
      </span>
      <span
        className="sr-only"
      >
        Last
      </span>
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components/Pager Relay Pager 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?before=bbb&last="
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?after=ccc&first="
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components/Pager Simple Page 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item active disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=1"
    >
      <span
        aria-hidden="true"
      >
        «
      </span>
      <span
        className="sr-only"
      >
        First
      </span>
      <span
        className="sr-only"
      >
        (current)
      </span>
    </span>
  </li>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=0"
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </span>
  </li>
  <li
    className="page-item active"
  >
    <span
      className="page-link"
      disabled={false}
      href="/?page=1"
    >
      1
      <span
        className="sr-only"
      >
        (current)
      </span>
    </span>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=2"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=3"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=4"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=5"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=6"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      6
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      >
        …
      </span>
      <span
        className="sr-only"
      >
        More
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=10"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      10
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=2"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="/?page=10"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        aria-hidden="true"
      >
        »
      </span>
      <span
        className="sr-only"
      >
        Last
      </span>
    </a>
  </li>
</ul>
`;
